# syslog-ng

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  autogen.sh  configure.ac  syslog-ng.supp
contrib/valgrind/: syslog-ng.supp
lib/: Makefile.am  afinter.c  alarms.c  apphook.c  apphook.h  cfg-grammar.y  cfg-lex.l  cfg-lexer-subst.c  cfg-lexer.c  cfg-lexer.h  cfg-parser.c  cfg-parser.h  cfg-tree.c  cfg-tree.h  cfg.c  cfg.h  crypto.c  dnscache.c  early_ack_tracker.c  file-perms.c  file-perms.h  find-crlf.c  find-crlf.h  gprocess.c  gprocess.h  gsockaddr.c  gsockaddr.h  host-id.c  host-resolve.c  hostname-unix.c  late_ack_tracker.c  logmatcher.c  logmpx.c  logmsg-serializer.c  logmsg-serializer.h  logmsg.c  logmsg.h  logpipe.h  logqueue-fifo.c  logqueue.h  (+44 more)
lib/compat/: Makefile.am  glib.c  glib.h
lib/control/: control-server-unix.c  control-server.c  control.c
lib/debugger/: debugger-main.c  debugger.c
lib/filter/: filter-cmp.c  filter-expr-grammar.ym  filter-expr-parser.c  filter-in-list.c  filter-netmask.c  filter-netmask6.c  filter-netmask6.h  filter-pipe.c  filter-re.c
lib/logmsg/: Makefile.am  logmsg.c  logmsg.h  nvtable-serialize.c  nvtable.c  nvtable.h
lib/logproto/: Makefile.am  logproto-buffered-server.c  logproto-buffered-server.h  logproto-builtins.c  logproto-client.c  logproto-client.h  logproto-record-server.c  logproto-regexp-multiline-server.c  logproto-server.c  logproto-server.h  logproto-text-client.c
lib/parser/: parser-expr.c  parser-expr.h
lib/rewrite/: rewrite-expr-grammar.ym  rewrite-expr-parser.c  rewrite-groupset.c  rewrite-set.c  rewrite-set.h  rewrite-subst.c
lib/stats/: stats-counter.h  stats-csv.c  stats.c
lib/template/: Makefile.am  compiler.c  function.h  macros.c  repr.c  simple-function.c  templates.c  templates.h  user-function.c  user-function.h
lib/tests/: Makefile.am  test_cache.c  test_cfg_lexer_subst.c  test_host_resolve.c  test_hostname.c  test_lexer.c  test_log_message.c  test_logmsg_serializer.c  test_pathutils.c  test_rcptid.c  test_runid.c  test_str-utils.c  test_str_format.c  test_string_list.c  test_userdb.c  test_utf8utils.c
lib/value-pairs/: value-pairs.c
libtest/: Makefile.am  mock-transport.c  msg_parse_lib.c  msg_parse_lib.h  proto_lib.c  queue_utils_lib.c  template_lib.c  template_lib.h  testutils.c  testutils.h
m4/: check_java_support.m4
modules/: Makefile.am
modules/afamqp/: Makefile.am  afamqp-grammar.ym  afamqp.c  afamqp.h
modules/affile/: affile-common.c  affile-common.h  affile-dest.c  affile-dest.h  affile-grammar.ym  affile-parser.c  affile-plugin.c  affile-source.c  logproto-file-writer.c
modules/afmongodb/: Makefile.am  afmongodb-grammar.ym  afmongodb-legacy-grammar.c  afmongodb-legacy-grammar.h  afmongodb-legacy-private.h  afmongodb-legacy-uri.c  afmongodb-legacy-uri.h  afmongodb-legacy.c  afmongodb-legacy.h  afmongodb-parser.c  afmongodb-parser.h  afmongodb-private.h  afmongodb.c  afmongodb.h  host-list.c  host-list.h
modules/afmongodb/tests/: Makefile.am  test-backwards-config-uri.c  test-mongodb-config.c
modules/afprog/: afprog-grammar.ym  afprog-parser.c  afprog-plugin.c  afprog.c  afprog.h
modules/afsmtp/: afsmtp.c  afsmtp.h
modules/afsocket/: Makefile.am  afinet-dest.c  afinet-source.c  afinet.c  afsocket-dest.c  afsocket-grammar.ym  afsocket-parser.c  afsocket-plugin.c  afsocket-source.c  afsocket-systemd-override.h  afunix-dest.c  afunix-source.c  systemd-syslog-source.c  systemd-syslog-source.h  transport-mapper-inet.c  transport-mapper-inet.h  transport-mapper.c  transport-unix-socket.c
modules/afsql/: Makefile.am  afsql-grammar.ym  afsql-parser.c  afsql-plugin.c  afsql.c  afsql.h
modules/afstomp/: afstomp-grammar.ym  afstomp.c  stomp.c
modules/afstreams/: afstreams-grammar.ym  afstreams-parser.c  afstreams.c
modules/afuser/: afuser-plugin.c  afuser.c
modules/basicfuncs/: Makefile.am  basic-funcs.c  cond-funcs.c  numeric-funcs.c  str-funcs.c
modules/builtin-serializer/: Makefile.am  builtin-serializer-plugin.c  builtin-serializer.c  builtin-serializer.h  gsockaddr-serialize.c  gsockaddr-serialize.h  nvtable-serialize.c  nvtable-serialize.h  sdata-serialize.c  sdata-serialize.h  tags-serialize.c  tags-serialize.h  timestamp-serialize.c  timestamp-serialize.h
modules/builtin-serializer/tests/: Makefile.am  test_builtin_serializer.c  test_gsockaddr_serialize.c  test_nvtable_serialize.c  test_timestamp_serialize.c
modules/cef/: cef-plugin.c  format-cef-extension.c  format-cef-extension.h
modules/confgen/: confgen-plugin.c  confgen.h
modules/cryptofuncs/: Makefile.am  cryptofuncs.c
modules/csvparser/: csv-scanner.c  csvparser-grammar.ym  csvparser-parser.c  csvparser-plugin.c  csvparser.c
modules/date/: date-grammar.ym  date-parser-parser.c  date-parser.c  date-parser.h  date-plugin.c
modules/dbparser/: Makefile.am  correllation-context.c  correllation-context.h  correllation-key.c  correllation-key.h  dbparser-grammar.ym  dbparser-parser.c  dbparser-plugin.c  groupingby.c  patterndb.c  patternize.c  patternize.h  pdb-action.c  pdb-action.h  pdb-load.c  pdb-rule.c  pdb-rule.h  radix.c  radix.h  synthetic-message.c  synthetic-message.h  timerwheel.c
modules/dbparser/pdbtool/: Makefile.am  pdbtool.c
modules/diskq/: Makefile.am  diskq.c  (+22 more)
modules/kvtagger/: Makefile.am  csv-tagrecord-scanner.c  csv-tagrecord-scanner.h  kvtagdb.c  kvtagdb.h  kvtagger-plugin.c  kvtagger.c
modules/kvtagger/tests/: Makefile.am  test_kvtagdb.c
sbuild/: builder.py  configure_opts.py
scripts/: build-dbi.sh  build-riemann-client.sh  build-systemd.sh  get-gradle.sh  get-libjvm-path.sh  make-and-check.sh  strace-func-test.sh  style-checker.sh
srelease/: platforms
syslog-ng/: Makefile.am  main.c
syslog-ng-ctl/: syslog-ng-ctl.c
tests/: build-log-cflags-propagation.sh
tests/functional/: Makefile.am  control.py  func_test.py  globals.py  log.py  messagecheck.py  messagegen.py  pylintrc  sngtestmod.py  test_file_source.py  test_filters.py  test_input_drivers.py  test_performance.py  test_python.py  test_sql.py
tgz2build/: rules  tgz2deps
(+202 files in other folders)
